--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 <body>
     <div class="all-site">
+        <audio autoplay>
+  <source src="img/background-music.m4a" type="audio/m4a">
+</audio>
 
         <h1 class="heading puff-in-center ">ROCK PAPER SCISSORS GAME</h1>
         <div class="main-content">
