--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="all-site">
         <audio autoplay>
-  <source src="img/background-music.m4a" type="audio/m4a">
+  <source src="background-music.m4a" type="audio/m4a">
 </audio>
 
         <h1 class="heading puff-in-center ">ROCK PAPER SCISSORS GAME</h1>
